@@ -101,10 +101,6 @@ lib/SPVM/Net/SSLeay/GENERAL_NAME.c
 lib/SPVM/Net/SSLeay/GENERAL_NAME.config
 lib/SPVM/Net/SSLeay/GENERAL_NAME.pm
 lib/SPVM/Net/SSLeay/GENERAL_NAME.spvm
-lib/SPVM/Net/SSLeay/HMAC_CTX.c
-lib/SPVM/Net/SSLeay/HMAC_CTX.config
-lib/SPVM/Net/SSLeay/HMAC_CTX.pm
-lib/SPVM/Net/SSLeay/HMAC_CTX.spvm
 lib/SPVM/Net/SSLeay/OBJ.c
 lib/SPVM/Net/SSLeay/OBJ.config
 lib/SPVM/Net/SSLeay/OBJ.pm
