@@ -1,21 +1,0 @@
-# Copyright (c) 2024 Yuki Kimoto
-# MIT License
-
-class Net::SSLeay::HMAC_CTX {
-  
-  use Fn;
-  
-  # Class Methods
-  private static method new_with_pointer : Net::SSLeay::HMAC_CTX ($pointer : Address, $options : object[] = undef) {
-    
-    my $self = new Net::SSLeay::HMAC_CTX;
-    
-    Fn->set_pointer($self, $pointer);
-    
-    return $self;
-  }
-  
-  # Instance Methods
-  native method DESTROY : void ();
-  
-}
